[package]
name = "stopwatch-rs"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A stopwatch implementation with suspend/resume feature."
repository = "https://github.com/akiradeveloper/stopwatch-rs"
readme = "README.md"
categories = ["development-tools"]
keywords =  ["benchmark"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quanta = "0.10"